@@ -1,32 +1,33 @@
 package com.egorkuban.restaurantvote.mapper;
 
-import com.egorkuban.restaurantvote.jpa.entity.MealEntity;
-import com.egorkuban.restaurantvote.model.MealDto;
+import com.egorkuban.restaurantvote.jpa.model.Meal;
+import com.egorkuban.restaurantvote.to.MealDto;
 
+import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class MealMapper {
 
-    public final static MealMapper INSTANCE = new MealMapper();
+    public static final MealMapper INSTANCE = new MealMapper();
 
-    public List<MealEntity> mapToMealsEntity(List<MealDto> meals) {
+    public List<Meal> mapToMeals(List<MealDto> meals) {
         if (meals == null) {
             return Collections.emptyList();
         }
         return meals.stream()
-                .map(this::mapToMealEntity)
-                .collect(Collectors.toList());
+                .map(this::mapToMeal)
+                .toList();
     }
 
-    private MealEntity mapToMealEntity(MealDto mealDto) {
-        return new MealEntity()
+    private Meal mapToMeal(MealDto mealDto) {
+        return new Meal()
                 .setName(mealDto.getName())
-                .setPrice(mealDto.getPrice());
+                .setPrice(mealDto.getPrice())
+                .setDate(LocalDate.now());
     }
 
-    public List<MealDto> mapToMealsDto(List<MealEntity> meals) {
+    public List<MealDto> mapToMealsDto(List<Meal> meals) {
         if (meals == null) {
             return Collections.emptyList();
         }
@@ -34,6 +35,6 @@ public class MealMapper {
                 .map(meal -> new MealDto()
                         .setName(meal.getName())
                         .setPrice(meal.getPrice()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
